@@ -23,6 +23,11 @@ Added
 - New `--quiet` argument for the `:debug-pyeval` command to not open a tab with
   the results. Note `:debug-pyeval` is still only intended for debugging.
 
+Fixed
+~~~~~
+
+- Fixed completion for various config values when using `:set`.
+
 v0.5.0
 ------
 
